--- a/src/styles/components/_pokemon-card.scss
+++ b/src/styles/components/_pokemon-card.scss
@@ -44,7 +44,7 @@
 @media (min-width: 524px) {
     .pokemon-card {
         width: calc(50% - 32px);
-        margin: 0 32px 32px 0;
+        margin: 0 16px 32px 16px;
     }
 }
 
