--- a/src/styles/components/_side-nav-bar.scss
+++ b/src/styles/components/_side-nav-bar.scss
@@ -7,7 +7,6 @@
     left: 0;
     right: 0;
     min-height: 72px;
-    box-shadow: 8px 0 5px -5px rgba(0, 0, 0, .3);
 }
 
 @media (min-width: 1024px) {
